--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/pg": "^8.11.10",
     "nodemon": "^3.1.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "pg": "^8.13.0"
   }
 }
